src/objects/Auth__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dialogflow__c</fullName>
        <label>dialogflow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>login__c</fullName>
        <label>login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>token__c</fullName>
        <label>token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <label>url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Auth</label>
</CustomObject>